// Vitest Snapshot v1

exports[`Test api > Should accept further duplicates-configuration 1`] = `
{
  "conflicts": [
    {
      "conflicts": [
        [
          "b",
        ],
      ],
      "missing": [
        [
          "c",
          "x",
        ],
      ],
    },
    {
      "conflicts": [
        [
          "b",
        ],
      ],
      "missing": [
        [
          "c",
          "a",
        ],
      ],
    },
  ],
  "duplicates": [
    Map {},
    Map {
      "a" => [
        [
          "a",
        ],
        [
          "c",
          "x",
          "a",
        ],
      ],
    },
  ],
  "prettified": [
    "{
	\\"a\\": 20,
	\\"b\\": {
		\\"a\\": 322
	},
	\\"c\\": {
		\\"a\\": 50
	}
}",
    "{
	\\"a\\": 23,
	\\"b\\": \\"Super\\",
	\\"c\\": {
		\\"x\\": {
			\\"a\\": 100
		}
	}
}",
  ],
}
`;

exports[`Test api > Should properly lint the given objects 1`] = `
{
  "conflicts": [
    {
      "conflicts": [
        [
          "pages",
          "dashboard",
          "s",
        ],
      ],
      "missing": [
        [
          "pages",
          "dashboard",
          "panels",
        ],
        [
          "pages",
          "main",
        ],
        [
          "about",
        ],
      ],
    },
    {
      "conflicts": [
        [
          "pages",
          "dashboard",
          "s",
        ],
      ],
      "missing": [],
    },
  ],
  "duplicates": [
    Map {
      "back" => [
        [
          "back",
        ],
        [
          "pages",
          "back",
        ],
      ],
      "dashboard" => [
        [
          "dashboard",
        ],
        [
          "pages",
          "dashboard",
          "dashboard",
        ],
      ],
    },
    Map {
      "back" => [
        [
          "back",
        ],
        [
          "pages",
          "back",
        ],
      ],
      "dashboard" => [
        [
          "dashboard",
        ],
        [
          "pages",
          "dashboard",
          "dashboard",
        ],
        [
          "pages",
          "main",
          "dashboard",
        ],
      ],
    },
  ],
  "prettified": [
    "{
    \\"back\\": \\"Zurück\\",
    \\"dashboard\\": \\"Dashboard\\",
    \\"pages\\": {
        \\"back\\": \\"Zurück\\",
        \\"dashboard\\": {
            \\"dashboard\\": \\"Dashboard\\",
            \\"footer\\": \\"Fußbar\\",
            \\"s\\": null
        }
    }
}",
    "{
    \\"about\\": \\"About\\",
    \\"back\\": \\"Back\\",
    \\"dashboard\\": \\"Dashboard\\",
    \\"pages\\": {
        \\"back\\": \\"Back\\",
        \\"dashboard\\": {
            \\"dashboard\\": \\"Dashboard\\",
            \\"footer\\": [],
            \\"panels\\": \\"Panels\\",
            \\"s\\": []
        },
        \\"main\\": {
            \\"dashboard\\": \\"Dashboard\\"
        }
    }
}",
  ],
}
`;

exports[`Test api > Should work with naming conventions 1`] = `
{
  "conflicts": [
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [
        [
          "c",
          "y",
        ],
      ],
    },
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [],
    },
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [],
    },
  ],
  "duplicates": [
    Map {},
    Map {},
    Map {},
  ],
  "naming": [
    [
      {
        "failed": [
          "/[^x]/",
        ],
        "key": "x",
        "path": [
          "c",
          "x",
        ],
      },
    ],
    [
      {
        "failed": [
          "/[^x]/",
        ],
        "key": "x",
        "path": [
          "c",
          "x",
        ],
      },
    ],
    [],
  ],
  "prettified": [
    "{
	\\"a\\": 20,
	\\"b\\": null,
	\\"c\\": {
		\\"x\\": 20
	}
}",
    "{
	\\"a\\": 50,
	\\"b\\": \\"Hello\\",
	\\"c\\": {
		\\"x\\": 100,
		\\"y\\": 20
	}
}",
    "{
	\\"a\\": \\"Five\\",
	\\"b\\": \\"Super\\",
	\\"c\\": null
}",
  ],
}
`;

exports[`Test api > Should work with the example given in the README 1`] = `
{
  "conflicts": [
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [
        [
          "c",
          "y",
        ],
      ],
    },
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [],
    },
    {
      "conflicts": [
        [
          "a",
        ],
        [
          "b",
        ],
        [
          "c",
        ],
      ],
      "missing": [],
    },
  ],
  "duplicates": [
    Map {},
    Map {},
    Map {},
  ],
  "prettified": [
    "{
	\\"a\\": 20,
	\\"b\\": null,
	\\"c\\": {
		\\"x\\": 20
	}
}",
    "{
	\\"a\\": 50,
	\\"b\\": \\"Hello\\",
	\\"c\\": {
		\\"x\\": 100,
		\\"y\\": 20
	}
}",
    "{
	\\"a\\": \\"Five\\",
	\\"b\\": \\"Super\\",
	\\"c\\": null
}",
  ],
}
`;
